[package]
name = "piston2d_abstraction_proc_macros"
version = "0.1.2"
edition = "2021"
description = "Procedural macros for the piston2d_abstraction crate."
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.16"
syn = "1.0.89"

[features]